backdrop and emoji waving animation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
 
         <!-- <nav id="desktop-nav"> -->
             <div class="menu"> 
+                <div class="backdrop">
+                    <h3>        </h3>
+                </div>
                 <ul class="nav-links">
                     <li><a class="bullets" href="#about">about</a></li>
+                    <li><a class="bullets" href="#work">work</a></li>
                     <li><a class="bullets" href="#scribbles">scribbles</a></li>
                     <li><a class="bullets"href="#contact">contact</a></li>
-                    <li><a class="bullets" href="#work">work</a></li>
                 </ul> 
 
                 <div class="menu-right">
@@ -38,7 +41,7 @@
                     </div>
                     <div class="self-intro">
                         <h2 class="hi">
-                            hey, i'm angela 👋 
+                            hey, i'm angela <span class="emoji-wave"> 👋</span> 
                         </h2>
                         <h3 class="small-headline">
                             cs @ umich 
