--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <div class="intro-box" data-aos="fade-up"> 
                     <div class="headshot">
-                        <img src="./assets/headshot.jpeg" />
+                        <img class="headshot-img"src="./assets/headshot.jpeg" />
                     </div>
                     <div class="self-intro">
                         <h2 class="hi">
@@ -56,7 +56,8 @@
 
                 <div class="about-me">
                     <h3 class="paragraph">I'm a student at the University of Michigan, trying to build out 
-                        <br> exciting tools and products for head-scratching questions.</h3>
+                        <br> exciting tools and products for head-scratching questions. 
+                        <br> Always happy to chat!</h3>
                         <h3 class="current">
                         <span class="colorful">This summer:</span>
                         &nbsp;SWE @ AiPi Solutions, <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good, 
@@ -66,20 +67,34 @@
                 
             </div>
 
+            <!-- Experiences section -->
+            <div>
+                <h2>Current work</h2>
+                <div class="experience-section" id="experience-container">
+                    <!-- The experience cards will be added dynamically here -->
+                </div>
+            </div>
+
+
+
+
+
+
     
         <!-- </nav> -->
-        <script src="script.js"></script>
-    </div>
+    </>
 
 
 
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <!-- <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script> -->
 
-    <script src="bower_components/aos/dist/aos.js"></script>
+    <!-- <script src="bower_components/aos/dist/aos.js"></script> -->
     <script>
         AOS.init();
-      </script>
+    </script>
+    <script src="script.js"></script>
+
 </body>
 </html>
