Project section layout

--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
                 </div>
             </div>
 
+            <!-- Projects section -->
+            <div>
+                <h2 class="projects-header">Projects</h2>
+                <section id="projects-section">
+                    <!-- Projects will be dynamically populated here -->
+                </section>
+            </div>
+
+              
+
 
 
 
