--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav-links">
                     <li><a class="bullets" href="#about">about</a></li>
                     <li><a class="bullets" href="#work">work</a></li>
-                    <li><a class="bullets" href="#scribbles">scribbles</a></li>
+                    <li><a class="bullets" href="#resume">resume</a></li>
                     <li><a class="bullets"href="#contact">contact</a></li>
                 </ul> 
 
