--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <span class="colorful">This summer:</span>
                         &nbsp;SWE @ AiPi Solutions, <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good, 
                         <br> &nbsp;Web dev @ UMich Atlas Digital's internal project 🤫
+                        <br> &nbsp;Prepping for HackMIT '23 🎈
                     </h3>
                 </div>
                 
