Menu bar fixing, adding some links/smooth scrolling

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                     <h3>        </h3>
                 </div>
                 <ul class="nav-links">
-                    <li><a class="bullets" href="#about">about</a></li>
-                    <li><a class="bullets" href="#work">work</a></li>
-                    <li><a class="bullets" href="#resume">resume</a></li>
-                    <li><a class="bullets"href="#contact">contact</a></li>
+                    <li><a class="bullets" href="#intro-box">about</a></li>
+                    <li><a class="bullets" href="#work-header">work</a></li>
+                    <li><a class="bullets" href="https://drive.google.com/file/d/1fCrB-jn0xJznOfcNbjMsH77GGny-MXFC/view?usp=sharing" target=_blank>resume</a></li>
+                    <li><a class="bullets" href="mailto:asyuan@umich.edu">contact</a></li>
                 </ul> 
 
                 <div class="menu-right">
@@ -70,7 +70,7 @@
 
             <!-- Experiences section -->
             <div>
-                <h2>Current work</h2>
+                <h2 id="work-header">Current work</h2>
                 <div class="experience-section" id="experience-container">
                     <!-- The experience cards will be added dynamically here -->
                 </div>
@@ -80,7 +80,7 @@
             <div>
                 <h2 class="projects-header">Projects</h2>
                 <h4><em>(This page is currently under construction. Please refer 
-                    <a className="portfolio-links-doc" target=_blank href="https://docs.google.com/document/d/1_EwZGuywDZJ7x3JYekku4byRe1mvAUOkesRGa7Ul_hU/edit?usp=sharing">
+                    <a class="portfolio-links-doc" target=_blank href="https://docs.google.com/document/d/1_EwZGuywDZJ7x3JYekku4byRe1mvAUOkesRGa7Ul_hU/edit?usp=sharing">
                     here</a> to more info on my projects!)</em></h4>
                 <section id="projects-section">
                     <!-- Projects will be dynamically populated here -->
