Removed commas for summer work

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <br> Always happy to chat!</h3>
                         <h3 class="current">
                         <span class="colorful">This summer:</span>
-                        &nbsp;SWE @ AiPi Solutions, <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good, 
+                        &nbsp;SWE @ AiPi Solutions <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good 
                         <br> &nbsp;Web dev @ UMich Atlas Digital's internal project 🤫
                         <br> &nbsp;Prepping for HackMIT '23 🎈
                     </h3>
