Jara video added, added Github

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a class="social-icon" href="https://www.linkedin.com/in/angela-yuan1/" target="_blank">
                         <ion-icon name="logo-linkedin"></ion-icon>
                     </a>
+                    <a class="social-icon" href="https://github.com/AngelaSYuan" target="_blank">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
 
                 </div>
             </div>
@@ -62,7 +65,7 @@
                         <span class="colorful">This summer:</span>
                         &nbsp;SWE @ AiPi Solutions <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good 
                         <br> &nbsp;Web dev @ UMich Atlas Digital's internal project 🤫
-                        <br> &nbsp;Prepping for HackMIT '23 🎈
+                        <br> &nbsp;Prepping for HackMIT '23 & PennApps '23 🎈
                     </h3>
                 </div>
                 
