--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <!-- Projects section -->
             <div>
                 <h2 class="projects-header">Projects</h2>
-                <h4><em>(This page is currently under construction. Please refer 
+                <h4><em>(This section is currently under construction. Please refer 
                     <a class="portfolio-links-doc" target=_blank href="https://docs.google.com/document/d/1_EwZGuywDZJ7x3JYekku4byRe1mvAUOkesRGa7Ul_hU/edit?usp=sharing">
-                    here</a> to more info on my projects!)</em></h4>
+                    here</a> for more details on my projects.)</em></h4>
                 <section id="projects-section">
                     <!-- Projects will be dynamically populated here -->
                 </section>
