--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <ul class="nav-links">
                     <li><a class="bullets" href="#intro-box">about</a></li>
                     <li><a class="bullets" href="#work-header">work</a></li>
-                    <li><a class="bullets" href="https://drive.google.com/file/d/1fCrB-jn0xJznOfcNbjMsH77GGny-MXFC/view?usp=sharing" target=_blank>resume</a></li>
+                    <!-- <li><a class="bullets" href="https://drive.google.com/file/d/1fCrB-jn0xJznOfcNbjMsH77GGny-MXFC/view?usp=sharing" target=_blank>resume</a></li> -->
                     <li><a class="bullets" href="mailto:asyuan@umich.edu">contact</a></li>
                 </ul> 
 
