Updating summer section, added Atlassian and hackMIT

--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                         <br> exciting tools and products for head-scratching questions. 
                         <br> Always happy to chat!</h3>
                         <h3 class="current">
-                        <span class="colorful">This summer:</span>
-                        &nbsp;SWE @ AiPi Solutions <br> &nbsp;Engineering Manager Intern @ Jara/Develop for Good 
-                        <br> &nbsp;Web dev @ UMich Atlas Digital's internal project 🤫
-                        <br> &nbsp;Prepping for HackMIT '23 & PennApps '23 🎈
+                        <span class="colorful">This past summer:</span>
+                        SWE Intern @ Atlassian
+                        <!-- <br> <span class="subheading"> <&nbsp;Worked on backend of Comet, a new project automating Bitbucket CI pipelines -->
+                        <br>  Fellow in hackNY
+                        <br> Explored NYC
+                        <!-- <br class="subheading">  &nbsp;Met lifelong friends, and learned from inspiring engineers and VCs. -->
+                        <br>Prepping for Hack the North '23 ⚙️
                     </h3>
                 </div>
                 
@@ -73,7 +76,7 @@
 
             <!-- Experiences section -->
             <div>
-                <h2 id="work-header">Current work</h2>
+                <h2 id="work-header">Recent work</h2>
                 <div class="experience-section" id="experience-container">
                     <!-- The experience cards will be added dynamically here -->
                 </div>
