Added Unmute project and updated HTN win

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <br>  Fellow in hackNY
                         <br> Explored NYC
                         <!-- <br class="subheading">  &nbsp;Met lifelong friends, and learned from inspiring engineers and VCs. -->
-                        <br>Prepping for Hack the North '24 ⚙️
+                        <br>Prepping for Hack the North '24 ⚙️ (Update: we won 1st place for using Symphonic Labs' lipreading API 🥳 Read more below.)
                     </h3>
                 </div>
                 
@@ -85,9 +85,10 @@
             <!-- Projects section -->
             <div>
                 <h2 class="projects-header">Projects</h2>
-                <h4><em>(This section is currently under construction. Please refer 
+                <h4>Hover over each card for links/details.</h4>
+                <h4><em>(Please refer 
                     <a class="portfolio-links-doc" target=_blank href="https://docs.google.com/document/d/1_EwZGuywDZJ7x3JYekku4byRe1mvAUOkesRGa7Ul_hU/edit?usp=sharing">
-                    here</a> for more details on my projects.)</em></h4>
+                    here</a> for other projects.)</em></h4>
                 <section id="projects-section">
                     <!-- Projects will be dynamically populated here -->
                 </section>
