--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <br>  Fellow in hackNY
                         <br> Explored NYC
                         <!-- <br class="subheading">  &nbsp;Met lifelong friends, and learned from inspiring engineers and VCs. -->
-                        <br>Prepping for Hack the North '24 ⚙️ (Update: we won 1st place for using Symphonic Labs' lipreading API 🥳 Read more below.)
+                        <br>Prepped for Hack the North '24 ⚙️ (Update: we won 1st place for using Symphonic Labs' lipreading API 🥳 Read more below.)
                     </h3>
                 </div>
                 
